--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,19 @@
      <% if user_signed_in? %>
 
           <%= link_to "Create New Post", new_post_path, class: "btn btn-default btn-lg" %>
-          <%= link_to "See My Posts", new_post_path, class: "btn btn-default btn-lg" %>
+          <%= link_to "See My Posts", current_user, class: "btn btn-default btn-lg" %>
+
      <% else %>
        <p>
          <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-         <%= link_to "Sign up", user_path, class: "btn btn-primary btn-lg" %>
+         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
        </p>
+
   <% end %>  
 </div>
+
+<h2> Latest Tweets </h2>
+<% @posts.each do | post | %>
+	<% @id = post.author_id %>
+	<p>"<%= post.description %>" written by <%= User.find(@id).first_name %></p>
+<% end %> 
