--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,23 @@
 <h1>New Post</h1>
 
+
+
 <%= form_for :post,  url: posts_path do |f| %>
+
+
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h3>
+        <%= pluralize(@post.errors.count, "error") %> prohibited
+        this post from being saved:
+      </h3>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
  
   <p>
     <%= f.label :description %><br>
