fix flash message styling

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -24,3 +24,11 @@ $jumbotron-bg:                     white;
     margin-left: 0px;
     margin-top: 4px \9;
 }
+
+.alert-notice {
+   background-color: #66E167;
+   border-color: #D6E9C6;
+   width: 280px;
+   color: black;
+   padding-top: 20px;
+}
