--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,9 +4,12 @@
       <h1>Edit <%= resource_name.to_s.humanize %></h1>
     </div>
   </div>
+
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
       <%= devise_error_messages! %>
+
+      <h1> Profile Information </h1>
 
       <div class="form-group">
         <%= f.label :first_name %>
@@ -17,6 +20,30 @@
         <%= f.label :last_name %>
         <%= f.text_field :last_name, class: "form-control", :autofocus => true %>
       </div>
+
+      <h1> More Profile Information: </h1>
+
+      <div class="form-group">
+        <%= f.label :intro %><i>Who are you?:</i>
+        <%= f.text_field :intro, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :purpose %><i>What is your purpose?:</i>
+        <%= f.text_field :purpose, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :interests %><i>What are your interests?:</i>
+        <%= f.text_field :interests, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :ideal_world %><i>What is your ideal world?:</i>
+        <%= f.text_field :ideal_world, class: "form-control", :autofocus => true %>
+      </div>
+
+      <h1> Account Information </h1>
 
       <div class="form-group">
         <%= f.label :email %>
