--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,25 @@
 <div class="jumbotron center">
-     <h1>Welcome to Danke!</h1>
      <% if user_signed_in? %>
+      <div class="new_post">
+          <%= form_for :post, url: posts_path do |f| %>
+           
+            <p>
+              <%= f.label :description %><br>
+              <%= f.text_field :description %>
+            </p>
+           
+            <p>
+              <%= f.submit %>
+            </p>
+          <% end %>
+        </div>
 
-          <%= link_to "Create New Post", new_post_path, class: "btn btn-default btn-lg" %>
-          <%= link_to "See My Posts", current_user, class: "btn btn-default btn-lg" %>
-
+          <%= link_to "Create New Post", new_post_path, class: "btn btn-default btn-lg create_post" %>
      <% else %>
        <p>
          <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
        </p>
-
   <% end %>  
 </div>
 
@@ -21,3 +30,14 @@
 	<p>"<%= post.description %>" written by <%= User.find(@id).first_name %></p>
 <% end %> 
 <% end %>
+
+
+<%= link_to "About Danke", about_path %>
+
+
+<script>
+  $('document').ready(function(){
+      console.log("AJAX is ready, miss regina!")
+    });
+
+</script>
