--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,30 +1,3 @@
 <h1>New Post</h1>
 
-
-
-<%= form_for :post,  url: posts_path do |f| %>
-
-
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h3>
-        <%= pluralize(@post.errors.count, "error") %> prohibited
-        this post from being saved:
-      </h3>
-      <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
- 
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
