--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,7 +21,7 @@
         <%= f.text_field :last_name, class: "form-control", :autofocus => true %>
       </div>
 
-      <h1> More Profile Information: </h1>
+      <h1> Personal Information: </h1>
 
       <div class="form-group">
         <%= f.label :intro %><i>Who are you?:</i>
