--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,20 @@
 <div class="jumbotron center">
      <% if user_signed_in? %>
+
+     <h2 class="jumbotron_title"> Send a snap, today!</h2>
+
       <div class="new_post">
           <%= form_for :post, url: posts_path do |f| %>
-           
             <p>
-              <%= f.label :description %><br>
               <%= f.text_field :description %>
-            </p>
-           
-            <p>
-              <%= f.submit %>
+              <%= f.submit%>
             </p>
           <% end %>
         </div>
-
-          <%= link_to "Create New Post", new_post_path, class: "btn btn-default btn-lg create_post" %>
+          <%= link_to "Write Snap", new_post_path, class: "btn btn-lg create_post_button" %>
      <% else %>
+          <h2> Welcome to SnapCup! </h2>
+          <p> Sign up or Log In to begin sending snaps. </p>
        <p>
          <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
@@ -23,21 +22,52 @@
   <% end %>  
 </div>
 
-<h2> Latest Tweets </h2>
-<% if @posts %>
-<% @posts.each do | post | %>
-	<% @id = post.author_id %>
-	<p>"<%= post.description %>" written by <%= User.find(@id).first_name %></p>
-<% end %> 
-<% end %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-7">
+          <h2 class="title"> Latest Tweets </h2>
+          <% if @posts %>
+          <% @posts.each do | post | %>
+            <div class="indiv_tweet">
+            <% @id = post.author_id %>
+            <p><%= User.find(@id).first_name %> wrote on <%= post.created_at.to_formatted_s(:short)  %>:</p>
+            <h4><%= post.description %></h4>
+            </div>
+          <% end %> 
+          <% end %>
+
+        </div>
+        <div class="col-md-3">
+            <h2 class="title">About</h2>
+            <p>Danke is a passion project founded by Andrew.</p>
+            <p>The goal behind this project is a foster a positive community online among friends and family. This project is currently in beta and looking for sponsors and supporters interested in contributing to this mission of spreading support and positivity. As a member of this community, we are completely transparent and any profit that we make will be returned back to this community. </p>
+            <p>Let's begin building a more positive future one snap at a time!</p>
+            <img src="http://s33.postimg.org/ny44pam1r/treehouse.jpg" alt="Treehouse" style="width:220px;height:260px;">
+            <p>
+            <%= link_to "Read More... ", about_path %></p>
+        </div>
+    </div>
+</div>
 
 
-<%= link_to "About Danke", about_path %>
+
 
 
 <script>
   $('document').ready(function(){
-      console.log("AJAX is ready, miss regina!")
+      console.log("AJAX is ready, miss regina!");
+      $(".new_post").hide();
+      $(".create_post_button").click(function(e){
+        e.preventDefault();
+        $(".create_post_button").hide();
+        $(".new_post").show();
+      });
+      $(".new_post").submit(function(e){
+        // e.preventDefault();
+        // console.log("I clicked 'Save Post'");
+        // $(".new_post").hide();
+        // $(".create_post_button").show();
+      })
     });
 
 </script>
