make tweet box bigger

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -61,12 +61,13 @@ $jumbotron-bg:                     white;
 .indiv_tweet p{
   margin-left: 20px;
   color:#D3D3D3;
+  padding-top: 5px;
 }
 
 .indiv_tweet h4{
   margin-top: -8px;
   margin-left: 40px;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
 
 }
 
